force-app/main/default/objects/dcp_Payment_Item__c/dcp_Payment_Item__c.object-meta.xml
<CustomObject>
    <description>Holds information about Payment Items related to a Storm Relief Case.</description>
    <label>Payment Item</label>
    <nameField>
        <displayFormat>PMT{00000000}</displayFormat>
        <label>Payment Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>