force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Address__c.field-meta.xml
<CustomField>
    <fullName>dcp_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>