force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Amount__c.field-meta.xml
<CustomField>
    <fullName>dcp_Amount__c</fullName>
    <description>Captures the payment amount</description>
    <inlineHelpText>Captures the payment amount</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>