force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Bank_BSB__c.field-meta.xml
<CustomField>
    <fullName>dcp_Bank_BSB__c</fullName>
    <label>Bank BSB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>