force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>dcp_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>