force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Case__c.field-meta.xml
<CustomField>
    <fullName>dcp_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Payment Items</relationshipLabel>
    <relationshipName>Payment_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>