force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Extract_Date__c.field-meta.xml
<CustomField>
    <fullName>dcp_Extract_Date__c</fullName>
    <label>Extract Date</label>
    <type>Date</type>
</CustomField>