force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Extract_Number__c.field-meta.xml
<CustomField>
    <fullName>dcp_Extract_Number__c</fullName>
    <label>Extract Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>