force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Market_Identifier__c.field-meta.xml
<CustomField>
    <fullName>dcp_Market_Identifier__c</fullName>
    <label>Market Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>