force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Origin__c.field-meta.xml
<CustomField>
    <fullName>dcp_Origin__c</fullName>
    <description>Specifies the source from which the payment record is created.</description>
    <inlineHelpText>Specifies the source from which the payment record is created.</inlineHelpText>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web EAI</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>