force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>dcp_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>