force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>dcp_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>