force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>dcp_Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>