force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Status__c.field-meta.xml
<CustomField>
    <fullName>dcp_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Bank Rejected</fullName>
            </value>
            <value>
                <fullName>Finance Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>