force-app/main/default/objects/dcp_Payment_Item__c/fields/dcp_Week__c.field-meta.xml
<CustomField>
    <fullName>dcp_Week__c</fullName>
    <label>Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>